# masters-thesis

./: .gitignore  README.md
BoolGPSymbReg/: CMakeLists.txt  CudaEvaluator.cu  Primitives.cpp  README.md  SymbRegEvalOp.cpp  SymbRegEvalOp.h  build.sh  main.cpp
BoolGPSymbReg/data/: input_generator.py  parameters.txt
BoolGPSymbReg/lib/: ECF
BoolGPSymbReg/src/: BenchmarkEvalOp.cpp  BenchmarkEvalOp.h  BenchmarkOp.cpp  BenchmarkOp.h  Constants.h  CpuPostfixEvalOp.cpp  CpuPostfixEvalOp.h  CudaEvaluator.cpp  CudaEvaluator.cu  CudaEvaluator.h  CudaPostfixEvalOp.cpp  CudaPostfixEvalOp.cu  CudaPostfixEvalOp.h  Dataset.cpp  Dataset.h  PostfixEvalOpUtils.cpp  PostfixEvalOpUtils.h  PostfixEvaluator.cpp  PostfixEvaluator.h  Primitives.cpp  SymbRegEvalOp.cpp  SymbRegEvalOp.h  Timer.h  Utils.cpp  Utils.h  main.cpp
CudaNetEvolution/: CMakeLists.txt  ClonAlg.cpp  ClonAlg.h  Common.h  CudaEvaluator.cu  CudaEvaluator.h  Dataset.cpp  Dataset.h  Matrix.cpp  Matrix.h  Net.cu  Net.h  build.sh  main.cpp
CudaNetEvolution/src/: ClonAlg.cu  ClonAlg.hpp  Dataset.cc  Dataset.hpp  Matrix.cc  Net.cu  Net.hpp  main.cc
Dependencies/ECF_1.4.2/: AUTHORS  CMakeLists.txt  COPYING  README  configure.ac
Dependencies/ECF_1.4.2/ECF/: AlgAEliGPEA.cpp  AlgAEliGPEA.h  AlgAEliGPEA2.cpp  AlgAEliGPEA2.h  AlgArtificialBeeColony.cpp  AlgArtificialBeeColony.h  AlgClonalg.cpp  AlgClonalg.h  AlgCuckooSearch.cpp  AlgCuckooSearch.h  AlgDifferentialEvolution.cpp  AlgDifferentialEvolution.h  AlgElimination.cpp  AlgElimination.h  AlgEvolutionStrategy.cpp  AlgEvolutionStrategy.h  AlgGenHookeJeeves.cpp  AlgGenHookeJeeves.h  AlgGeneticAnnealing.cpp  AlgGeneticAnnealing.h  AlgNSGA2.cpp  AlgNSGA2.h  AlgOptIA.cpp  AlgOptIA.h  AlgParticleSwarmOptimization.cpp  AlgParticleSwarmOptimization.h  AlgRandomSearch.cpp  AlgRandomSearch.h  AlgRouletteWheel.cpp  AlgRouletteWheel.h  AlgSGenGPEA.cpp  AlgSGenGPEA.h  AlgSteadyStateTournament.cpp  AlgSteadyStateTournament.h  Algorithm.cpp  Algorithm.h  Communicator.cpp  Communicator.h  Context.h  Crossover.cpp  (+54 more)
Dependencies/ECF_1.4.2/ECF/binary/: Binary.cpp  BinaryCrsHalfUniform.cpp  BinaryCrsHalfUniform.h  BinaryCrsMasked.cpp  BinaryCrsMasked.h  BinaryCrsNonGeometric.cpp  BinaryCrsRandomRespectful.cpp  BinaryCrsRandomRespectful.h  BinaryCrsReducedSurrogate.cpp  BinaryCrsReducedSurrogate.h  BinaryCrsSegmented.cpp  BinaryCrsSegmented.h  BinaryCrsShuffle.cpp  BinaryCrsShuffle.h  BinaryCrsTwoPoint.cpp  BinaryCrsTwoPoint.h  BinaryMutMix.cpp  BinaryMutMix.h  BinaryMutSimple.cpp
Dependencies/ECF_1.4.2/ECF/bitstring/: BitStringMutMix.cpp  BitStringMutSimple.cpp
Dependencies/ECF_1.4.2/ECF/cartesian/: Cartesian.cpp  Cartesian.h  CartesianMutOnePoint.cpp  Cartesian_c.h  FunctionSet.cpp  FunctionSet.h
Dependencies/ECF_1.4.2/ECF/examples/CGPFeedForward/: FeedForwardEvalOp.h  parametri.txt
Dependencies/ECF_1.4.2/ECF/floatingpoint/: FloatingPoint.h  FloatingPointCrsArithmetic.h  FloatingPointCrsArithmeticSimple.cpp  FloatingPointCrsArithmeticSimple.h  FloatingPointCrsArithmeticSingle.cpp  FloatingPointCrsArithmeticSingle.h  FloatingPointCrsAverage.cpp  FloatingPointCrsAverage.h  FloatingPointCrsBga.cpp  FloatingPointCrsBga.h  FloatingPointCrsBlx.cpp  FloatingPointCrsBlx.h  FloatingPointCrsBlxAlpha.cpp  FloatingPointCrsBlxAlpha.h  FloatingPointCrsBlxAlphaBeta.cpp  FloatingPointCrsBlxAlphaBeta.h  FloatingPointCrsDiscrete.cpp  FloatingPointCrsDiscrete.h  FloatingPointCrsFlat.cpp  FloatingPointCrsFlat.h  FloatingPointCrsHeuristic.cpp  FloatingPointCrsHeuristic.h  FloatingPointCrsLocal.cpp  FloatingPointCrsLocal.h  FloatingPointCrsOnePoint.h  FloatingPointCrsRandom.cpp  FloatingPointCrsRandom.h  FloatingPointCrsSbx.cpp  FloatingPointCrsSbx.h  FloatingPointMutSimple.cpp  FloatingPointMutSimple.h
Dependencies/ECF_1.4.2/ECF/permutation/: Permutation.cpp  Permutation.h  PermutationCrsCOSA.cpp  PermutationCrsCOSA.h  PermutationCrsCyclic.cpp  PermutationCrsCyclic.h  PermutationCrsCyclic2.cpp  PermutationCrsCyclic2.h  PermutationCrsDPX.cpp  PermutationCrsOBX.cpp  PermutationCrsOBX.h  PermutationCrsOPX.cpp  PermutationCrsOX.cpp  PermutationCrsOX2.cpp  PermutationCrsOX2.h  PermutationCrsPBX.cpp  PermutationCrsPMX.cpp  PermutationCrsSPX.cpp  PermutationCrsULX.cpp  PermutationCrsULX.h  PermutationCrsUPMX.cpp  PermutationMutIns.cpp  PermutationMutInv.cpp
Dependencies/ECF_1.4.2/ECF/tree/: Add.h  Cos.cpp  Cos.h  Div.h  Max.h  Min.h  Mul.h  Neg.h  Node.h  Pos.h  Primitive.cpp  Primitive.h  PrimitiveSet.cpp  PrimitiveSet.h  Sin.cpp  Sin.h  Sub.h  Terminal.h  Tree.cpp  Tree.h  TreeCrxContextPreserved.cpp  TreeCrxContextPreserved.h  TreeCrxOnePoint.cpp  TreeCrxOnePoint.h  TreeCrxSimple.cpp  TreeCrxSizeFair.cpp  TreeCrxSizeFair.h  TreeCrxUniform.cpp  TreeCrxUniform.h  TreeMutGauss.cpp  TreeMutGauss.h  TreeMutHoist.cpp  TreeMutHoist.h  TreeMutNodeComplement.cpp  TreeMutNodeComplement.h  TreeMutNodeReplace.cpp  TreeMutNodeReplace.h  TreeMutPermutation.cpp  TreeMutPermutation.h  TreeMutShrink.cpp  (+4 more)
Dependencies/ECF_1.4.2/ECF/xcs/: AlgXCS.cpp  AlgXCS.h  Classifier.cpp  Classifier.h  ClassifierParams.h  Environment.h  XCSParams.cpp  XCSParams.h
GPSymbReg/: CMakeLists.txt  Constants.h  CudaEvaluator.cu  CudaEvaluator.h  README.md  SymbRegEvalOp.cpp  SymbRegEvalOp.cu  SymbRegEvalOp.h  build.sh  input_generator.py  main.cpp  parameters.txt
GPSymbReg/data/: input_generator.py  parameters.txt  parameters_min.txt
GPSymbReg/src/: BenchmarkEvalOp.cpp  BenchmarkEvalOp.h  BenchmarkOp.cpp  BenchmarkOp.h  CUPostfixEvalOp.cpp  CUPostfixEvalOp.cu  CUPostfixEvalOp.h  Constants.h  CpuPostfixEvalOp.cpp  CpuPostfixEvalOp.h  CudaEvaluator.h  CudaPostfixEvalOp.cpp  CudaPostfixEvalOp.cu  CudaPostfixEvalOp.h  Dataset.cpp  Dataset.h  PostfixEvalOpUtils.cpp  PostfixEvalOpUtils.h  PostfixEvaluator.cpp  PostfixEvaluator.h  SimpleEvaluator.cpp  SimpleEvaluator.h  SymbRegEvalOp.cpp  SymbRegEvalOp.h  Utils.cpp  Utils.h  main.cpp
Scratchpad/FastMatMul/: CMakeLists.txt  Matrix.cpp  Matrix.cu  Matrix.h  input_generatory.py  main.cpp
Scratchpad/GPTreeEvaluator/: CMakeLists.txt  main.cpp
gp/: CMakeLists.txt  main.cpp
(+51 files in other folders)
